[build-system]
requires = ['setuptools', 'wheel']

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
# Things that are common enough they may as well be grouped with stdlib imports
extra_standard_library = ['dateutil', 'setuptools']
