[metadata]
author = Jordan Cook
description = A simple CLI utility to backup and restore game saves
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
license_files = LICENSE
url = https://github.com/JWCook/save-scummer
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
