[metadata]
author = Jordan Cook
description = A simple CLI utility to backup and restore game saves
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
license_files = LICENSE
url = https://github.com/JWCook/save-scummer
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[flake8]
max_line_length = 120
exclude = __pycache__,.tox,build,dist,test,venv
# Defer these rules to black:
ignore =
    E225  # missing whitespace around operator
    W503  # line break before binary operator
    W504  # line break after  binary operator

# Show 7 lines of context in debugger
[ipdb]
context = 7

# Tell mypy to ignore external libraries without type annotations
[mypy]
ignore_missing_imports = True
